        added tests for compilation of CGI scripts
        usage of UNIVERSAL::require
          (http://www.packetfence.org/mantis/view.php?id=631)
        updated jpgraph version
          (http://www.packetfence.org/mantis/view.php?id=632)
        moved admin/calendar into 3rdparty directory
          (http://www.packetfence.org/mantis/view.php?id=635)

1.8.1
        authorized @ as first symbol in password
          (http://www.packetfence.org/mantis/view.php?id=551)
        daily graphs and issues with year end
          (http://www.packetfence.org/mantis/view.php?id=553)
        correct order in monthly graph
          (http://www.packetfence.org/mantis/view.php?id=552)
        new configfiles push and pull commands
          (http://www.packetfence.org/mantis/view.php?id=550)
        documented pfcmd manage commands
          (http://www.packetfence.org/mantis/view.php?id=554)
        CSS style for web admin gui help pages
          (http://www.packetfence.org/mantis/view.php?id=555)
        added favicon
          (http://www.packetfence.org/mantis/view.php?id=557)
        CSS style for web admin gui edit pages
          (http://www.packetfence.org/mantis/view.php?id=558)
        permitted switches.conf modification through CLI
          and web admin GUI
          (http://www.packetfence.org/mantis/view.php?id=433)
        made default LDAPUserScope sub
          (http://www.packetfence.org/mantis/view.php?id=561)
        permitted violations.conf modification through CLI
          and web admin GUI
          (http://www.packetfence.org/mantis/view.php?id=560)
        authorized & character in grammar
          (http://www.packetfence.org/mantis/view.php?id=563)
        fixed link to nonexisting add.png file
          (http://www.packetfence.org/mantis/view.php?id=564)
        updated web admin gui help file content
          (http://www.packetfence.org/mantis/view.php?id=556)
        fixed pfcmd report os and report osclass crashes when 