@@ -47,6 +47,8 @@
           (http://www.packetfence.org/mantis/view.php?id=632)
         moved admin/calendar into 3rdparty directory
           (http://www.packetfence.org/mantis/view.php?id=635)
+        moved lookup_node and lookup_person into libraries
+          (http://www.packetfence.org/mantis/view.php?id=633)
 
 1.8.1
         authorized @ as first symbol in password
